Tela Inicial + Cadastro

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.MemoMate"
         tools:targetApi="31">
         <activity
+            android:name=".components.AppNavigation"
+            android:exported="false"
+            android:label="@string/title_activity_app_navigation"
+            android:theme="@style/Theme.MemoMate" />
+        <activity
+            android:name=".ui.ui.pages.greetings.Greeting"
+            android:exported="false"
+            android:label="@string/title_activity_greeting"
+            android:theme="@style/Theme.MemoMate" />
+        <activity
+            android:name=".ui.ui.Greeting"
+            android:exported="false"
+            android:label="@string/title_activity_greeting"
+            android:theme="@style/Theme.MemoMate" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
